<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/gray"
    app:cardBackgroundColor="@color/gray"
    app:cardCornerRadius="17dp"
    app:cardElevation="1dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:id="@+id/mainRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <TextView
                android:id="@+id/textViewRecordName"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_marginEnd="140dp"
                android:gravity="center"
                android:singleLine="true"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:text="@string/text"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/date_of_record"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textViewRecordName"
                android:text="@string/date_of_record" />


            <TextView
                android:id="@+id/currentTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="-4dp"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@+id/imageButton"
                android:text="@string/current_time_0_00" />

            <ImageView
                android:id="@+id/imageButton"
                android:layout_width="70dp"
                android:layout_height="60dp"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/play_record_image"
                android:padding="8dp"
                android:src="@drawable/ic_play" />

        </RelativeLayout>


    </RelativeLayout>

</androidx.cardview.widget.CardView>